fabric/testdata/out/ing_setanta-categories-staging-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"945a1e7f-8660-420e-b369-1d8ead57aa21","deployment-id":"d-h26p2nh5mx6m64fwthngr496b","pipeline-id":"l-2fh11iwr97crmf1ps8xchjjbwk"},"name":"setanta-categories-staging-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"setanta-categories-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-categories-staging","servicePort":"http"},"pathType":"Implemen [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2019-12-16T16:19:33Z"
  generation: 1
  labels:
    controller-uid: 945a1e7f-8660-420e-b369-1d8ead57aa21
    deployment-id: d-h26p2nh5mx6m64fwthngr496b
    pipeline-id: l-2fh11iwr97crmf1ps8xchjjbwk
  name: setanta-categories-staging-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-categories-staging
    uid: 945a1e7f-8660-420e-b369-1d8ead57aa21
  resourceVersion: "1380519925"
  uid: d439711b-b2e3-431c-8387-d17211b54485
spec:
  rules:
  - host: setanta-categories-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-categories-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: categories.setanta-staging.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
